# SAF

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: INGESTION_NOTES.md  MCP_CLIENT_SETUP.md  ROADMAP.md  SECURITY.md
examples/: claude_desktop_config.example.json  jsonrpc.md  sample_prompts.md
saf-mcp-blueprint/: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
saf-mcp-blueprint/docs/: BLUEPRINT.md  SPSS_COMPATIBILITY.md
saf-mcp-blueprint/examples/: recipe.json
saf-mcp-blueprint/scripts/: dev_inspect.sh
saf-mcp-blueprint/src/saf_mcp/: audit.py  config.py  io.py  metadata.py  recipes.py  reporting.py  security.py  server.py  syntax.py
saf-mcp-blueprint/src/saf_mcp/stats/: descriptive.py  inferential.py  regression.py  reliability.py
saf-mcp-blueprint/tests/: test_smoke.py
src/saf_mcp/: __init__.py  config.py  metadata.py  recipes.py  reporting.py  security.py  server.py  spss_utils.py  stats.py  syntax.py
tests/: smoke_live.py  test_imports.py  test_metadata.py  test_stats.py  test_stats_v2.py
