[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saf-mcp"
version = "0.2.0"
description = "An MCP server for SPSS-compatible datasets: SAV, ZSAV, POR, XLSX, CSV, metadata inspection, data preview, conversion, profiling, frequencies, crosstabs, reliability, and SPSS syntax generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SAF contributors" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "spss",
  "sav",
  "zsav",
  "por",
  "statistics",
  "data-analysis",
  "pyreadstat",
  "readstat",
  "python",
]
dependencies = [
  "mcp[cli]",
  "pandas",
  "pydantic",
  "pyreadstat",
  "numpy",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "pingouin>=0.5",
  "openpyxl",
]

[project.scripts]
saf-mcp = "saf_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
